--- a/src/global.css
+++ b/src/global.css
@@ -814,8 +814,6 @@ main {
   font-size: 20px;
   line-height: 160%;
   color: #FFFFFF;
-  margin-top: 16px;
-  margin-bottom: 0px;
 }
 
 .nftTitleInput {
@@ -999,12 +997,11 @@ input[type=number] {
   margin-top: 80px;
   border: none;
   padding: 11.5px var(--spacing-3);
-  color: white;
-  background: #333333;
+  background: #FFAD0D;
   border-radius: 3px;
 }
 .mainButton:hover {
-  background: #828282;
+  color: white;
   cursor: pointer;
 }
 .mainButton:disabled {
@@ -1016,6 +1013,7 @@ input[type=number] {
 }
 .buttonContainer {
   text-align: center;
+  margin-bottom: calc(2 * var(--nav-size));
 }
 
 .adminFlexBox {
