--- a/src/global.css
+++ b/src/global.css
@@ -393,6 +393,10 @@ main {
 #adminMain {
   overflow: scroll;
   padding: var(--spacing-5);
+  position: relative;
+  z-index: 2;
+  /*margin-right: 0;*/
+  /*padding-right: var(--spacing-5);*/
 }
 
 
@@ -635,9 +639,12 @@ main {
 
 #mynftsBackground {
   background: black;
-  position: absolute;
+  position: fixed;
   height: 100vh;
   width: 100vw;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 #mynftsGrid {
@@ -1021,7 +1028,7 @@ input[type=number] {
 }
 .buttonContainer {
   text-align: center;
-  margin-bottom: calc(2 * var(--nav-size));
+  padding-bottom: calc(2 * var(--nav-size));
 }
 
 .adminFlexBox {
